--- a/web_ui/styles/solo.css
+++ b/web_ui/styles/solo.css
@@ -1,29 +1,23 @@
 html {
 	width: 800px;
 	height: 480px;
-	background-color: black;
 	overflow: hidden;
-}
-
-#header {
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 40px;
-}
-
-#name {
-	width: 100%;
-	font-weight: bold;
 }
 
 #alert {
 	position: fixed;
 	left: 0px;
-	bottom: 390px;
+	top: 0px;
 	width: 100%;
 	display: none;
+}
+
+#body {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 438px;
 }
 
 #footer {
@@ -32,32 +26,48 @@ html {
 	bottom: 0px;
 	width: 100%;
 	height: 42px;
+	background-color: black;
 }
 
-#body {
+#cancel {
 	position: fixed;
-	left: 0px;
-	top: 40px;
-	width: 100%;
-	height: 398px; /* 480 - 40 - 42 = */
+	right: 10px;
+	top: 10px;
 }
 
 #list {
-	display: none;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 438px;
 }
 
 #editor {
+	position: fixed;
+	left: 0px;
+	top: 0px;
 	width: 100%;
-	height: 100%;
+	height: 438px;
+	background-color: black;
+}
+
+#name {
+	width: 250px;
+	height: 30px;
+	font-weight: bold;
 }
 
 #content {
+	position: fixed;
+	top: 0px;
 	width: 100%;
-	height: 100%;
+	height: 438px;
 	padding: 10px;
     resize: none;
     outline: none;
     border: none;
+    border-radius: 4px;
     font-family: Verdana;
     font-size: 14pt;
 }
