--- a/web_ui/styles/solo.css
+++ b/web_ui/styles/solo.css
@@ -6,10 +6,10 @@ html {
 
 #alert {
 	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	display: none;
+	left: 10px;
+	right: 10px;
+	top: 10px;
+	z-index: 1000;
 }
 
 #body {
@@ -49,7 +49,6 @@ html {
 	top: 0px;
 	width: 100%;
 	height: 438px;
-	background-color: black;
 }
 
 #name {
@@ -70,4 +69,8 @@ html {
     border-radius: 4px;
     font-family: Verdana;
     font-size: 14pt;
+}
+
+.logo {
+    background: url('/images/purple_transparent_logo.jpg') no-repeat center center;
 }
