--- a/public/styles/solo.css
+++ b/public/styles/solo.css
@@ -4,14 +4,6 @@ html {
 	overflow: hidden;
 }
 
-#alert {
-	position: fixed;
-	left: 10px;
-	right: 10px;
-	top: 10px;
-	z-index: 1000;
-}
-
 #body {
 	position: fixed;
 	left: 0px;
@@ -29,22 +21,12 @@ html {
 	background-color: black;
 }
 
-#cancel {
-	position: fixed;
-	right: 10px;
-	top: 10px;
-}
-
 #list {
 	position: fixed;
 	left: 0px;
 	top: 0px;
 	width: 100%;
 	height: 438px;
-}
-
-.doc-row {
-	cursor: pointer;
 }
 
 #editor {
@@ -84,6 +66,6 @@ html {
 	overflow-y: auto !important;
 }
 
-td.vertical-center {
+.vertical-center {
 	vertical-align: middle !important;
 }
