Special styling recommended by AngularJS UI

--- a/public/styles/solo.css
+++ b/public/styles/solo.css
@@ -69,3 +69,8 @@ html {
 .vertical-center {
 	vertical-align: middle !important;
 }
+
+/* from AngularJS-UI */
+.nav, .pagination, .carousel, .panel-title a {
+	cursor: pointer;
+}
