--- a/public/styles/solo.css
+++ b/public/styles/solo.css
@@ -73,4 +73,19 @@ html {
 /* from AngularJS-UI */
 .nav, .pagination, .carousel, .panel-title a {
 	cursor: pointer;
-}
+}
+
+.slideshow {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	max-width: 800px;
+	max-height: 480px;
+	background-color: black;
+}
+
+.slideshow img {
+	margin: auto;
+}
