Fix: use generic default font family for the Rpi

--- a/public/styles/solo.css
+++ b/public/styles/solo.css
@@ -53,8 +53,8 @@ html {
     outline: none;
     border: none;
     border-radius: 4px;
-    font-family: Verdana;
-    font-size: 18px;
+    font-family: sans-serif;
+    font-size: 20px;
 }
 
 .logo {
